Cantaloupe Sidebar: Fixed several minor bugs as well as some more major ones (inconsistent sizing of elements, issue where sidebar could close but info panel could stay  open...), also started strong push toward new design created by Lex  (Included minor update to icon fonts) along with several other visual modifications that should resolve some display quirks that were previously present, especially on smaller devices.

--- a/system/application/views/melons/cantaloupe/css/icons.css
+++ b/system/application/views/melons/cantaloupe/css/icons.css
@@ -23,6 +23,9 @@
 	-moz-osx-font-smoothing: grayscale;
 }
 
+.icon-plus:before {
+	content: "\f067";
+}
 .icon-arrow-down:before {
 	content: "\e60f";
 }
